# podcast_tech_radar

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: sample_transcript.txt
migrations/: 0001_init.sql  0001_pgvector.sql  0002_chunks_embeddings.sql
src/tech_radar/: __init__.py  card_markdown.py  chunk_nodes.py  chunking.py  cli.py  config.py  db.py  embeddings.py  graph.py  llm.py  migrations.py  models.py  nodes.py  reporting.py  schemas.py  smoke_test.py  storage.py  utils.py
src/tech_radar/parsers/: generic.py  lex.py
src/tech_radar/prompts/: query_optimizer.txt
tests/: test_query_optimizer.py
